// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component render snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TodoForm
    addTODO={
      [MockFunction] {
        "calls": Array [
          Array [
            "test",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    direction="row"
    maxLength={10}
    placeholderText="Placeholder"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <form
        className="todo-form"
      >
        <Input
          handleInput={[Function]}
          maxLength={10}
          placeholder="Placeholder"
          type="search"
          value=""
        />
        <Button
          handleButtonClick={[Function]}
          type="submit"
        >
            Add 
        </Button>
      </form>,
      "type": "large",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Input
            handleInput={[Function]}
            maxLength={10}
            placeholder="Placeholder"
            type="search"
            value=""
          />,
          <Button
            handleButtonClick={[Function]}
            type="submit"
          >
              Add 
          </Button>,
        ],
        "className": "todo-form",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "handleInput": [Function],
            "maxLength": 10,
            "placeholder": "Placeholder",
            "type": "search",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "  Add ",
            "handleButtonClick": [Function],
            "type": "submit",
          },
          "ref": null,
          "rendered": "  Add ",
          "type": [Function],
        },
      ],
      "type": "form",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <form
          className="todo-form"
        >
          <Input
            handleInput={[Function]}
            maxLength={10}
            placeholder="Placeholder"
            type="search"
            value=""
          />
          <Button
            handleButtonClick={[Function]}
            type="submit"
          >
              Add 
          </Button>
        </form>,
        "type": "large",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Input
              handleInput={[Function]}
              maxLength={10}
              placeholder="Placeholder"
              type="search"
              value=""
            />,
            <Button
              handleButtonClick={[Function]}
              type="submit"
            >
                Add 
            </Button>,
          ],
          "className": "todo-form",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleInput": [Function],
              "maxLength": 10,
              "placeholder": "Placeholder",
              "type": "search",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "  Add ",
              "handleButtonClick": [Function],
              "type": "submit",
            },
            "ref": null,
            "rendered": "  Add ",
            "type": [Function],
          },
        ],
        "type": "form",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Input Component render snapshot with column direction 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TodoForm
    addTODO={[MockFunction]}
    direction="column"
    maxLength={10}
    placeholderText="Placeholder"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <form
        className="todo-form__column"
      >
        <Input
          handleInput={[Function]}
          maxLength={10}
          placeholder="Placeholder"
          type="search"
          value=""
        />
        <Button
          handleButtonClick={[Function]}
          type="submit"
        >
            Add 
        </Button>
      </form>,
      "type": "small",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Input
            handleInput={[Function]}
            maxLength={10}
            placeholder="Placeholder"
            type="search"
            value=""
          />,
          <Button
            handleButtonClick={[Function]}
            type="submit"
          >
              Add 
          </Button>,
        ],
        "className": "todo-form__column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "handleInput": [Function],
            "maxLength": 10,
            "placeholder": "Placeholder",
            "type": "search",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "  Add ",
            "handleButtonClick": [Function],
            "type": "submit",
          },
          "ref": null,
          "rendered": "  Add ",
          "type": [Function],
        },
      ],
      "type": "form",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <form
          className="todo-form__column"
        >
          <Input
            handleInput={[Function]}
            maxLength={10}
            placeholder="Placeholder"
            type="search"
            value=""
          />
          <Button
            handleButtonClick={[Function]}
            type="submit"
          >
              Add 
          </Button>
        </form>,
        "type": "small",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Input
              handleInput={[Function]}
              maxLength={10}
              placeholder="Placeholder"
              type="search"
              value=""
            />,
            <Button
              handleButtonClick={[Function]}
              type="submit"
            >
                Add 
            </Button>,
          ],
          "className": "todo-form__column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleInput": [Function],
              "maxLength": 10,
              "placeholder": "Placeholder",
              "type": "search",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "  Add ",
              "handleButtonClick": [Function],
              "type": "submit",
            },
            "ref": null,
            "rendered": "  Add ",
            "type": [Function],
          },
        ],
        "type": "form",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Input Component render snapshot with empty input state 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TodoForm
    addTODO={[MockFunction]}
    direction="column"
    maxLength={10}
    placeholderText="Placeholder"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <form
        className="todo-form__column"
      >
        <Input
          handleInput={[Function]}
          maxLength={10}
          placeholder="Placeholder"
          type="search"
          value=""
        />
        <Button
          handleButtonClick={[Function]}
          type="submit"
        >
            Add 
        </Button>
      </form>,
      "type": "small",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Input
            handleInput={[Function]}
            maxLength={10}
            placeholder="Placeholder"
            type="search"
            value=""
          />,
          <Button
            handleButtonClick={[Function]}
            type="submit"
          >
              Add 
          </Button>,
        ],
        "className": "todo-form__column",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "handleInput": [Function],
            "maxLength": 10,
            "placeholder": "Placeholder",
            "type": "search",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "  Add ",
            "handleButtonClick": [Function],
            "type": "submit",
          },
          "ref": null,
          "rendered": "  Add ",
          "type": [Function],
        },
      ],
      "type": "form",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <form
          className="todo-form__column"
        >
          <Input
            handleInput={[Function]}
            maxLength={10}
            placeholder="Placeholder"
            type="search"
            value=""
          />
          <Button
            handleButtonClick={[Function]}
            type="submit"
          >
              Add 
          </Button>
        </form>,
        "type": "small",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Input
              handleInput={[Function]}
              maxLength={10}
              placeholder="Placeholder"
              type="search"
              value=""
            />,
            <Button
              handleButtonClick={[Function]}
              type="submit"
            >
                Add 
            </Button>,
          ],
          "className": "todo-form__column",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "handleInput": [Function],
              "maxLength": 10,
              "placeholder": "Placeholder",
              "type": "search",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "  Add ",
              "handleButtonClick": [Function],
              "type": "submit",
            },
            "ref": null,
            "rendered": "  Add ",
            "type": [Function],
          },
        ],
        "type": "form",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
